k8-manifests/qa/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: three-tier-java-app
  namespace: qa

spec:
  replicas: 2
  selector:
    matchLabels:
      app: three-tier-java-app

  template:
    metadata:
      labels:
        app: three-tier-java-app

    spec:
      containers:
        - name: three-tier-java-app
          image: 473488813390.dkr.ecr.ap-south-1.amazonaws.com/three-tier-java-app:6496dbd14b3ffd9df0b2c64b86f8cde902b589d2
          ports:
            - containerPort: 8080
