k8-manifests/qa/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: three-tier-java-app-service
  namespace: qa

spec:
  selector:
    app: three-tier-java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
