k8-manifests/qa/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-java-app-ingress
  namespace: qa
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - host: ${APP_DOMAIN}   # placeholder for custom domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: three-tier-java-app-service
                port:
                  number: 80
